overlapping bug

--- a/css/main.css
+++ b/css/main.css
@@ -3,21 +3,22 @@
     padding:0;
     box-sizing: border-box;
 }
-.clearfix::before,
-.clearfix::after{
+.clearfix::after {
     content: "";
-    display: table;
     clear: both;
-}
+    display: table;
+  }
 #battlefield{
     float: left;
     margin: auto;
+    width: 50%;
+    margin-bottom: 5px;
 }
 .rank{height: 50px;}
 .file{
     border: 1px solid black;
     display: block;
-    width: 50px;
+    width: 6.25%;
     height: 50px;
     padding-top: 9px;
     text-align: center;
@@ -30,13 +31,18 @@
     background-color: red;
 }
 
-h1{
-    font-size: 320px;
-    color : white;
-}
-#staging-area-1{
+#staging-area-1,
+#staging-area-2{
+    width: 50%;
     display: block;
     float: right;
+    height: 50vh;
+}
+#staging-area-1{
+    border-bottom: 1px solid red;
+}
+#staging-area-2{
+    margin-bottom: 5px;
 }
 .fighter-pfp{
     margin: 0;
@@ -46,4 +52,9 @@ h1{
 }
 .pfp-icon{
     margin-top: -10px;
+}
+#selection-area{
+    height: 100vh;
+    width: 100%;
+    border: 10px solid black;
 }
